.vscode-remote/data/logs/20250807T234220/exthost2/output_logging_20250807T235957/4-Prettier.log
["INFO" - 12:00:09 AM] Extension Name: esbenp.prettier-vscode.
["INFO" - 12:00:09 AM] Extension Version: 11.0.0.
["INFO" - 12:00:18 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:10:28 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:10:45 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:17:25 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:17:34 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:17:36 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:20:50 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:20:55 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:21:45 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:21:48 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:21:51 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:22:09 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:22:25 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:22:26 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:23:05 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:23:08 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:23:23 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:23:58 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:24:20 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:24:43 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:26:37 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:26:48 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:26:54 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:27:33 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:27:36 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:27:44 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:29:35 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:35:06 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:35:26 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:35:42 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:37:36 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:37:40 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:37:42 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:42:16 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:42:45 AM] Formatting file:///workspace/Website-starter/src/components/ui/icons/icons.ts
["INFO" - 12:42:45 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:42:45 AM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 12:42:45 AM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 12:42:45 AM] File Info:
{
  "ignored": false,
  "inferredParser": "typescript"
}
["INFO" - 12:42:45 AM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 12:42:45 AM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/components/ui/icons/icons.ts",
  "parser": "typescript",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["ERROR" - 12:42:45 AM] Error formatting document.
["ERROR" - 12:42:45 AM] Declaration or statement expected. (544:1)
  542 |                                                   }
  543 |   }
> 544 | };
      | ^
  545 |
SyntaxError: Declaration or statement expected. (544:1)
  542 |                                                   }
  543 |   }
> 544 | };
      | ^
  545 |
    at S4 (file:///workspace/Website-starter/node_modules/prettier/plugins/typescript.mjs:17:72190)
    at Q4 (file:///workspace/Website-starter/node_modules/prettier/plugins/typescript.mjs:20:1042)
    at Object.e3 [as parse] (file:///workspace/Website-starter/node_modules/prettier/plugins/typescript.mjs:20:1584)
    at Object.parse (file:///workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs:1329:27573)
    at async parse5 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:16731:11)
    at async coreFormat (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17287:25)
    at async formatWithCursor (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17504:14)
    at async Module.format2 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:19051:25)
["INFO" - 12:42:45 AM] Formatting completed in 93ms.
["INFO" - 12:43:29 AM] Formatting file:///workspace/Website-starter/src/components/ui/icons/icons.ts
["INFO" - 12:43:29 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:43:29 AM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 12:43:29 AM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 12:43:29 AM] File Info:
{
  "ignored": false,
  "inferredParser": "typescript"
}
["INFO" - 12:43:29 AM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 12:43:29 AM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/components/ui/icons/icons.ts",
  "parser": "typescript",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["INFO" - 12:43:29 AM] Formatting completed in 115ms.
["INFO" - 12:43:47 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:43:49 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:43:53 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:44:11 AM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 12:45:19 AM] Using config file at /workspace/Website-starter/.prettierrc
